# asterisk_wxalert

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python_app.yml
asterisk_wxalert/: wxalert.py
