[metadata]
name = asterisk_wxalert
version = 0.0.2
author = Tyler Carr
author_email = tcarwash@gmail.com
description = Update an asterisk device state from NOAA weather alerts 
long_description = file: README.md long_description_content_type = text/markdown
url = https://github.com/tcarwash/asterisk_wxalert
project_urls =
    Bug Tracker = https://github.com/tcarwash/asterisk_wxalert
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.5
install_requires =

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    wxalert = asterisk_wxalert.wxalert:main
